fixing layout bug and uuid from a project

--- a/src/layouts/HeaderSideBarFooterLayout/HeaderSideBarFooterLayout.module.css
+++ b/src/layouts/HeaderSideBarFooterLayout/HeaderSideBarFooterLayout.module.css
@@ -5,6 +5,7 @@
 .flexItem {
     background-color: transparent;
     margin-left: 60px;
+    flex-grow: 1;
 }
 
 @media (max-width: 900px) {
