--- a/src/pages/ProjectPage/ProjectPage.module.css
+++ b/src/pages/ProjectPage/ProjectPage.module.css
@@ -1,5 +1,4 @@
 .wrapper {
-
 }
 .container {
 }
@@ -54,6 +53,8 @@
 }
 .projectsSelectLabel {
     
+}
+.body {
 }
 
 @media (max-width: 900px){
